--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -178,7 +178,7 @@ LRPs based on logistic regressions may be appropriate when the following assumpt
 
 - Time-series of the proportion of CUs above the lower benchmark (or above red status) contain contrast such that all CUs are above their lower benchmark (or above red status) in at least one year and at least 1 CU is below its lower benchmark (or has red status) in at least one year.
 
-- There is a significant positive relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmark (or above red status) without influential outliers, as supported by model diagnostics described in Holt et al. in review. This relationship tends to be positive when pairwise correlations in spawner abundances are strong and positive among CUs. For example, for Interior Fraser Coho, goodness-of-fit diagnostics identified a significant relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmarks (p<0.01) and the average pairwise spawner correlations among CUs was relatively high, 0.43 (Holt et al. in review). In contrast, for Inside South Coast Chum, the same goodness-of-git diagnostic was not statistically significant (p>0.05) and average pairwise spawner correlations was relatively weak, <0.13."  <!--CH: Check exact cor and p-values-->
+- There is a significant positive relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmark (or above red status) without influential outliers, as supported by model diagnostics described in Holt et al. in review. This relationship tends to be positive when pairwise correlations in spawner abundances are strong and positive among CUs. For example, for Interior Fraser Coho, goodness-of-fit diagnostics identified a significant relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmarks (p<0.01) and the average pairwise spawner correlations among CUs was relatively high, 0.43. In contrast, for Inside South Coast Chum, the same goodness-of-git diagnostic was not statistically significant (p>0.05) and average pairwise spawner correlations was relatively weak, 0.13."  <!--CH: Check exact cor and p-values-->
 
 - Residuals for logistic regression model fit are independent, i.e., not temporally autocorrelated. <!--CH: "Or if autocorrelation is present in residuals, it is accounted for in the model with an AR(1) term."  Don't think we need it though-->
 
